[project]
name = "wiki-pulse-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
